plugins {
    id 'java'
    id 'application'
    id 'com.netflix.nebula.ospackage' version '11.11.1'
}

group = 'ch.epfl.gsn'
version = '2.0.4'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    maven { url = uri('https://repo.osgeo.org/repository/release/') }
    maven { url = uri('https://oss.sonatype.org/content/repositories/releases/') }
    maven { url = uri('https://oss.sonatype.org/content/repositories/snapshots/') }
    maven { url = uri("${System.properties['user.home']}/.ivy2/local") }
    maven { url = uri('lib/cache') }
}

dependencies {
    implementation 'org.scala-lang:scala-library:2.12.18'

    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    implementation 'com.h2database:h2:1.4.195'
    implementation 'com.mchange:c3p0:0.9.5-pre10'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0'
    implementation 'com.vividsolutions:jts-core:1.14.0'
    implementation 'mysql:mysql-connector-java:8.0.28'
    implementation 'org.postgresql:postgresql:42.3.0'
    implementation 'org.apache.commons:commons-dbcp2:2.0'
    implementation 'org.hibernate:hibernate-core:3.6.10.Final'
    implementation 'org.apache.httpcomponents:httpclient:4.3.2'
    implementation 'org.apache.commons:commons-email:1.3.2'
    implementation 'commons-collections:commons-collections:3.2.1'
    implementation 'commons-io:commons-io:2.4'
    implementation 'org.apache.logging.log4j:log4j-api:2.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.3'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.3'
    implementation 'org.apache.logging.log4j:log4j-web:2.3'
    implementation 'net.sf.opencsv:opencsv:2.3'
    implementation 'com.thoughtworks.xstream:xstream:1.4.5'
    implementation 'org.antlr:stringtemplate:3.0'
    implementation 'commons-lang:commons-lang:2.6'
    implementation 'rome:rome:1.0'
    implementation 'org.jfree:jfreechart:1.0.19'
    implementation 'org.jfree:jcommon:1.0.23'
    implementation 'org.codehaus.groovy:groovy:3.0.23'
    implementation 'net.rforge:REngine:0.6-8.1'
    implementation 'net.rforge:Rserve:0.6-8.1'
    implementation 'org.rxtx:rxtx:2.1.7'
    implementation 'com.esotericsoftware.kryo:kryo:2.23.0'
    implementation 'org.zeromq:jeromq:0.3.5'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
    implementation 'org.eclipse.californium:californium-core:1.0.4'
    implementation 'commons-fileupload:commons-fileupload:1.3.3'
    implementation 'com.jfinal:cos:2022.2'
    implementation 'org.eclipse.jetty:jetty-continuation:9.4.43.v20210629'
    implementation 'org.eclipse.jetty:jetty-io:9.4.43.v20210629'
    implementation 'org.jibx:jibx-run:1.3.1'

    compileOnly 'javax.servlet:javax.servlet-api:3.0.1'

    testImplementation 'junit:junit:4.11'
    testImplementation 'org.easymock:easymockclassextension:3.2'
    testImplementation 'org.mockito:mockito-core:5.18.0'
    testImplementation('org.httpunit:httpunit:1.7.2') {
        exclude group: 'xerces', module: 'xercesImpl'
        exclude group: 'xerces', module: 'xmlParserAPIs'
        exclude group: 'javax.servlet', module: 'servlet-api'
    }

    implementation fileTree(dir: 'lib', include: ['*.jar'])
}

application {
    mainClass = 'ch.epfl.gsn.Main'
    applicationName = 'gsn-core'
}

distributions {
    main {
        contents {
            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
            from('src/templates/gsn-core') {
                into 'bin'
            }
            from('src/main/resources/log4j2.xml') {
                into 'conf'
            }
            from('src/main/resources/wrappers.properties') {
                into 'conf'
            }
            from('../conf/gsn.xml') {
                into 'conf'
            }
            from('../virtual-sensors/samples') {
                include '**/*'
                into 'virtual-sensors-samples'
            }
        }
    }
}

tasks.named('buildDeb', com.netflix.gradle.plugins.deb.Deb) {
    dependsOn tasks.installDist

    packageName = 'gsn-core'
    release = '1'
    arch = 'ALL'
    os = LINUX
    summary = 'GSN Server'
    packageDescription = 'Global Sensor Networks Core'
    maintainer = 'LSIR EPFL <gsn@epfl.ch>'

    // Use a concrete runtime package available on both Debian and Ubuntu.
    requires('openjdk-17-jre-headless')
    suggests('postgresql')
    suggests('munin-node')
    suggests('gsn-services')

    into '/usr/share/gsn-core'

    from(tasks.installDist) {
        into '/usr/share/gsn-core'
    }

    from('src/main/resources/log4j2.xml') {
        into '/usr/share/gsn-core/conf'
        fileType CONFIG
        user 'gsn'
    }
    from('src/main/resources/wrappers.properties') {
        into '/usr/share/gsn-core/conf'
        fileType CONFIG
        user 'gsn'
    }
    from('../conf/gsn.xml') {
        into '/usr/share/gsn-core/conf'
        fileType CONFIG
        user 'gsn'
    }
    // Ship one default VS so a fresh install has a runnable sensor.
    from('../conf/virtual-sensors/packaged/memoryDataVS.xml') {
        into '/usr/share/gsn-core/conf/virtual-sensors'
        user 'gsn'
        permissionGroup 'root'
        fileMode 0775
    }
    // Always create conf/virtual-sensors, even when packaged sensors are empty.
    from('packaging/debian/virtual-sensors') {
        into '/usr/share/gsn-core/conf/virtual-sensors'
        user 'gsn'
        permissionGroup 'root'
        fileMode 0775
    }

    // Install a systemd unit and execute lifecycle hooks on install/remove.
    from('packaging/systemd/gsn-core.service') {
        into '/lib/systemd/system'
        permissionGroup 'root'
        user 'root'
        fileMode 0644
    }

    postInstall file('packaging/debian/postinst')
    preUninstall file('packaging/debian/prerm')
}
